# invade-rs

./: .gitignore  Cargo.toml
isagen/: Cargo.toml
isagen/script/: profile
isagen/src/: ast.rs  logic.lalrpop  logic.rs  main.rs
res/: 8080-isa.json  isa.pest
src/: cpu.rs  isa.rs  logic.rs  main.rs  memory.rs  opcodes.rs
src/logic/: ast.rs  logic.lalrpop  logic.rs  mod.rs
src/ui/: input.rs  mod.rs
